SkyXplore - Move data directly under game - Compilation error cleanup - Part 1